# collective.elastic.plone

./: .env  .gitignore  .travis.yml  CHANGES.rst  MANIFEST.in  Makefile  README.rst  base.cfg  bobtemplate.cfg  instance.yaml  mx.ini  pyproject.toml  requirements.txt  setup.cfg  setup.py  style.sh  test_plone51.cfg  test_plone52.cfg
.github/workflows/: ci.yaml  release.yaml
docs/: conf.py  index.rst
src/collective/elastic/plone/: __init__.py  configure.zcml  eslib.py  interfaces.py  proxyindex.py  queueprocessor.py  setuphandlers.py  testing.py  upgrades.py  upgrades.zcml
src/collective/elastic/plone/api/: configure.zcml
src/collective/elastic/plone/api/services/: configure.zcml
src/collective/elastic/plone/api/services/kitsearch/: configure.zcml  get.py  post.py  request_example.py  (+1 more)
src/collective/elastic/plone/browser/: configure.zcml  update.py
src/collective/elastic/plone/locales/: update.py
src/collective/elastic/plone/profiles/default/: browserlayer.xml  catalog.xml  metadata.xml
src/collective/elastic/plone/profiles/monolingual/: metadata.xml
src/collective/elastic/plone/profiles/multilingual/: metadata.xml  registry.xml
src/collective/elastic/plone/profiles/singlelingual/: metadata.xml  registry.xml
src/collective/elastic/plone/profiles/uninstall/: browserlayer.xml  catalog.xml
src/collective/elastic/plone/restapi/: blocks.py  configure.zcml  expansions.py  rid.py  schema.py  service.py
src/collective/elastic/plone/restapi/kitsearch/: configure.zcml  post.py  request_example.json  response_example.json
src/collective/elastic/plone/tests/: test_proxyindex.py  test_restapi.py  test_setup.py
src/collective/elastic/plone/tests/robot/: test_example.robot
src/collective/elastic/plone/www/: addIndex.zpt  manageIndex.zpt
src/collective/es/plone/: __init__.py  configure.zcml  eslib.py  interfaces.py  proxyindex.py  queueprocessor.py  setuphandlers.py  testing.py  upgrades.py
src/collective/es/plone/browser/: configure.zcml
src/collective/es/plone/locales/: update.py  update.sh
src/collective/es/plone/profiles/default/: catalog.xml
src/collective/es/plone/profiles/uninstall/: browserlayer.xml  catalog.xml
src/collective/es/plone/restapi/: configure.zcml  schema.py  service.py
src/collective/es/plone/tests/: test_proxyindex.py  test_restapi.py  test_robot.py  test_setup.py
src/collective/es/plone/www/: manageIndex.zpt
tests/: conftest.py  test_proxyindex.py  test_restapi.py  test_setup.py
